tests01/tests/error_test/test_error87.java
// Syntax error - cant define vars in block #2


class Main
{
	static void run()
	{
		if(1 == 2)
		{
			// error
			int a;
		}
	}
}
